# carnival

./: .env.docker  .env.example  .eslintrc.json  .gitignore  CHANGELOG.md  HACKATHON_SUMMARY.md  README.md  SETUP_COMPLETE.md  docker-compose.yml  package.json  pnpm-lock.yaml  railway.json  tsconfig.json  turbo.json
.claude/: settings.local.json
.github/workflows/: ci.yml
.kiro/specs/aesthetic-overhaul/: README.md  implementation-guide.md  requirements.md  tasks.md  visual-reference.md
.kiro/specs/complete-system-overhaul/: README.md  design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
apps/api/: .dockerignore  Dockerfile  Dockerfile.local  jest.config.ts  package.json  railway.json  tsconfig.json  tsconfig.tsbuildinfo
apps/api/src/: index.ts  testEnvSetup.ts
apps/api/src/__tests__/: sessionReview.integration.test.ts
apps/api/src/lib/: attestations.ts  crypto.ts  flags.ts  merkle.ts  reputation.ts
apps/api/src/middleware/: auth.ts  errorHandler.ts
apps/api/src/routes/: Untitled-1.txt  analytics.ts  attestations.ts  auth.ts  booths.ts  reviews.ts  sessions.ts  verify.ts
apps/api/src/types/: express.d.ts
apps/echoid/: .env.example  .gitignore  CARNIVAL_TECH_UPGRADE.md  FEATURE_ROADMAP.md  GAMIFICATION_PROGRESS.md  HACKATHON_SUBMISSION.md  INTEGRATION_COMPLETE.md  REFINED_CARNIVAL_UPGRADE.md  SECURITY_README.md  UI_OVERHAUL_SUMMARY.md  jest.config.js  jest.setup.js  next.config.js  package.json  playwright.config.ts  tailwind.config.js  theme.config.json  tsconfig.json  tsconfig.tsbuildinfo  vercel.json
apps/echoid/app/: globals.css  layout.tsx  page.tsx
apps/echoid/app/(id)/builder/: page.tsx
apps/echoid/app/api/anchor/: route.ts
apps/echoid/app/api/attest/: route.ts
apps/echoid/app/api/attestations/[address]/: route.ts
apps/echoid/app/api/login/daily/: route.ts
apps/echoid/app/api/profile/: route.ts
apps/echoid/app/api/profile/[address]/: route.ts
apps/echoid/app/api/quests/claim/: route.ts
apps/echoid/app/api/quests/daily/: route.ts
apps/echoid/app/api/quests/progress/: route.ts
apps/echoid/app/api/verify/[address]/: route.ts
apps/echoid/app/api/xp/award/: route.ts
apps/echoid/app/dashboard/: page.tsx
apps/echoid/app/explore/: page.tsx
apps/echoid/app/profile/[address]/: page.tsx
apps/echoid/app/quests/: page.tsx
apps/echoid/e2e/: routing-smoke.spec.ts
apps/echoid/e2e/support/: polkadotExtension.ts
apps/echoid/prisma/: schema.prisma  seed.js  seed.ts
apps/echoid/prisma/migrations/20251105025719_init/: migration.sql
apps/echoid/prisma/migrations/20251105041343_add_indexes/: migration.sql
apps/echoid/src/__tests__/: encryption.test.ts  rateLimit.test.ts  redis.test.ts
apps/echoid/src/components/: AnchorHashCard.tsx  AttestationForm.tsx  AttestationViewer.tsx  ConnectWallet.tsx  DailyLoginModal.tsx  OnboardingClient.tsx  OnboardingTutorial.tsx  ProfileForm.tsx
apps/echoid/src/components/avatar/: LayerCanvas.tsx
apps/echoid/src/components/flow/: FlowRail.tsx
apps/echoid/src/components/gamification/: AchievementCard.tsx  CoinCounter.tsx  LevelBadge.tsx  XPBar.tsx
apps/echoid/src/components/quests/: QuestCard.tsx
apps/echoid/src/components/ui/: animated-button.tsx  avatar.tsx  badge.tsx  booth-card.tsx  button.tsx  card.tsx  input.tsx  lights-progress.tsx  progress.tsx  skeleton.tsx  tabs.tsx  textarea.tsx  ticket-button.tsx
apps/echoid/src/components/wallet/: PolkadotConnect.tsx
apps/echoid/src/config/: traits.ts
apps/echoid/src/hooks/: useSoundEffects.ts
apps/echoid/src/lib/: encryption.ts  gamification.ts  hashing.ts  logger.ts  polkadot.ts  rateLimit.ts  redis.ts  reputation.ts  server-logger.ts  store.ts  utils.ts
apps/echoid/src/server/: db.ts
apps/echoid/src/state/: useAvatarStore.ts
apps/web/: .dockerignore  Dockerfile  next.config.js  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/booth/[slug]/: page.tsx
apps/web/app/booths/: page.tsx
apps/web/app/dashboard/: page.tsx
apps/web/app/dashboard/review/[sessionId]/: page.tsx
apps/web/app/verify/[hash]/: page.tsx
apps/web/e2e/: api.spec.ts  carnival.spec.ts
apps/web/src/components/: AttestationBadge.tsx  BoothExperience.tsx  CarnivalLights.tsx  FortuneWheel.tsx  Header.tsx  MidwayHero.tsx  OnboardingShowcase.tsx  ReviewForm.tsx  SessionControls.tsx  TrustMeter.tsx  WalletConnect.tsx
apps/web/src/components/ui/: GlassPanel.tsx  ServoLever.tsx  TicketStamp.tsx
apps/web/src/lib/: fonts.ts  server-auth.ts
apps/web/src/providers/: WalletProvider.tsx
apps/web/src/theme/: colors.ts  motion.ts
apps/web/src/utils/: confetti.ts
docs/: DEMO_SCRIPT.md  GETTING_STARTED.md  PROJECT_COMPLETE.md  QA_ROUTING_PLAN.md  RAILWAY_DEPLOYMENT.md  START_HERE.md
docs/design/: visual-system.md
echoid-node/node/: Cargo.toml
echoid-node/pallets/echoid/: Cargo.toml
echoid-node/pallets/echoid/src/: benchmarking.rs  lib.rs  tests.rs
echoid-node/runtime/: Cargo.toml
echoid-node/runtime/src/: lib.rs
scripts/: setup.ps1  setup.sh
substrate-node/node/: Cargo.toml
substrate-node/pallets/echoid/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
substrate-node/runtime/: Cargo.toml
substrate-node/runtime/src/: lib.rs
substrate-node/runtime/src/configs/: mod.rs
