[package]
name = "solochain-template-runtime"
description = "A solochain runtime template built with Substrate, part of Polkadot Sdk. (polkadot v1.15.0)"
version = "0.1.0"
license = "Unlicense"
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
homepage = "https://github.com/substrate-developer-hub"
repository = "https://github.com/substrate-developer-hub/substrate-node-template"
edition = "2021"
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { features = [
	"derive",
], git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
scale-info = { features = [
	"derive",
	"serde",
], git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
frame-support = { features = ["experimental"], git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
frame-system.git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master"
frame-try-runtime = { optional = true, git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
frame-executive.git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master"
pallet-aura.git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master"
pallet-balances.git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master"
pallet-grandpa.git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master"
pallet-sudo.git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master"
pallet-timestamp.git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master"
pallet-transaction-payment.git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master"
sp-api.git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master"
sp-block-builder.git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master"
sp-consensus-aura = { features = ["serde"], git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
sp-consensus-grandpa = { features = ["serde"], git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
sp-core = { features = ["serde"], git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
sp-inherents.git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master"
sp-offchain.git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master"
sp-runtime = { features = ["serde"], git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
sp-session.git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master"
sp-storage.git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master"
sp-transaction-pool.git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master"
sp-version = { features = ["serde"], git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
sp-genesis-builder.git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master"
frame-system-rpc-runtime-api.git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master"
pallet-transaction-payment-rpc-runtime-api.git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master"
frame-benchmarking = { optional = true, git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
frame-system-benchmarking = { optional = true, git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
pallet-echoid = { path = "../pallets/echoid" }

[build-dependencies]
substrate-wasm-builder = { optional = true, git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master", default-features = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",

	"frame-executive/std",
	"frame-support/std",
	"frame-system-benchmarking?/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",

	"frame-benchmarking?/std",
	"frame-try-runtime?/std",

	"pallet-aura/std",
	"pallet-balances/std",
	"pallet-grandpa/std",
	"pallet-sudo/std",
	"pallet-echoid/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",

	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-consensus-grandpa/std",
	"sp-core/std",
	"sp-genesis-builder/std",
	"sp-inherents/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-storage/std",
	"sp-transaction-pool/std",
	"sp-version/std",

	"substrate-wasm-builder",
]

runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system-benchmarking/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-grandpa/runtime-benchmarks",
	"pallet-sudo/runtime-benchmarks",
	"pallet-echoid/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]

try-runtime = [
	"frame-executive/try-runtime",
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"frame-try-runtime/try-runtime",
	"pallet-aura/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-grandpa/try-runtime",
	"pallet-sudo/try-runtime",
	"pallet-echoid/try-runtime",
	"pallet-timestamp/try-runtime",
	"pallet-transaction-payment/try-runtime",
	"sp-runtime/try-runtime",
]
