[package]
name = "solochain-template-runtime"
description = "A solochain runtime template built with Substrate, part of Polkadot Sdk."
version = "0.0.0"
license = "Unlicense"
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
edition = "2021"
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lints]

[dependencies]
codec = { version = "3.0.0", features = ["derive"], default-features = false }
scale-info = { version = "2.0.0", features = ["derive", "serde"], default-features = false }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

# frame
frame-executive = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
frame-metadata-hash-extension = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
frame-support = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
frame-try-runtime = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master", optional = true }

# frame pallets
pallet-aura = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
pallet-balances = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
pallet-grandpa = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
pallet-sudo = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
pallet-timestamp = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
pallet-transaction-payment = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }

# primitives
sp-api = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
sp-block-builder = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
sp-consensus-aura = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
sp-consensus-grandpa = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
sp-genesis-builder = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
sp-inherents = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
sp-keyring = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
sp-offchain = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
sp-session = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
sp-storage = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
sp-transaction-pool = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
sp-version = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }

# RPC related
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }

# Used for runtime benchmarking
frame-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master", optional = true }
frame-system-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master", optional = true }

# The pallet in this template.
pallet-template = { workspace = true }

# Echoid pallet
pallet-echoid = { path = "../pallets/echoid" }

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master", default-features = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-benchmarking?/std",
	"frame-executive/std",
	"frame-metadata-hash-extension/std",
	"frame-support/std",
	"frame-system-benchmarking?/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
	"frame-try-runtime?/std",
	"pallet-aura/std",
	"pallet-balances/std",
	"pallet-echoid/std",
	"pallet-grandpa/std",
	"pallet-sudo/std",
	"pallet-template/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	"scale-info/std",
	"serde_json/std",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-consensus-grandpa/std",
	"sp-core/std",
	"sp-genesis-builder/std",
	"sp-inherents/std",
	"sp-keyring/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-storage/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"substrate-wasm-builder",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system-benchmarking/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-echoid/runtime-benchmarks",
	"pallet-grandpa/runtime-benchmarks",
	"pallet-sudo/runtime-benchmarks",
	"pallet-template/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"pallet-transaction-payment/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
try-runtime = [
	"frame-executive/try-runtime",
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"frame-try-runtime/try-runtime",
	"pallet-aura/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-echoid/try-runtime",
	"pallet-grandpa/try-runtime",
	"pallet-sudo/try-runtime",
	"pallet-template/try-runtime",
	"pallet-timestamp/try-runtime",
	"pallet-transaction-payment/try-runtime",
	"sp-runtime/try-runtime",
]

# Enable the metadata hash generation.
#
# This is hidden behind a feature because it increases the compile time.
# The wasm binary needs to be compiled twice, once to fetch the metadata,
# generate the metadata hash and then a second time with the
# `RUNTIME_METADATA_HASH` environment variable set for the `CheckMetadataHash`
# extension.
metadata-hash = ["substrate-wasm-builder/metadata-hash"]

# A convenience feature for enabling things when doing a build
# for an on-chain release.
on-chain-release-build = ["metadata-hash", "sp-api/disable-logging"]
